--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       margin-top: 250px;
     }
   </style>
-  <title>Aku Sayang Kamu Susan</title>
+  <title>Aku Sayang Kamu</title>
 
 </head>
 
